# Olist-Machine-Learning

./: README.md  mkdocs.yml  pyproject.toml
conf/: config.yaml
conf/hydra/job_logging/: custom.yaml
docs/: data-integration.md  data-overview.md  data-understanding.md  index.md  problem-definition.md
docs/business_understanding/: problem_definition.md
docs/data_preparation/: clean_data.md  construct_data.md  format_data.md  select_data.md
docs/data_understanding/: describe_data.md  explore_data_customer_segmentation.md  explore_data_demand_forecasting.md  verify_data_quality.md
notebooks/: data_integration.ipynb  data_overview.ipynb  data_understanding.ipynb
notebooks/.ipynb_checkpoints/: data_integration-checkpoint.ipynb  data_understanding-checkpoint.ipynb
notebooks/data_preparation/.ipynb_checkpoints/: clean_data-checkpoint.ipynb  construct_data-checkpoint.ipynb  format_data-checkpoint.ipynb
notebooks/data_understanding/.ipynb_checkpoints/: describe_data-checkpoint.ipynb  explore_data_customer_segmentation-checkpoint.ipynb  explore_data_demand_forecasting-checkpoint.ipynb  verify_data_quality-checkpoint.ipynb
src/olist_ml/: config.py
src/olist_ml/pipelines/extract/: main.py  pipeline.py
src/olist_ml/pipelines/extract/download_sqlite_from_gcs/: nodes.py  types.py
src/olist_ml/pipelines/extract/extract_sqlite_tables/: nodes.py  types.py
src/olist_ml/pipelines/preprocessing/: main.py  pipeline.py
src/olist_ml/pipelines/preprocessing/build_base_dataset_in_bigquery/: nodes.py  types.py
tests/: test_transform.py
(+2 files in other folders)
