[project]
name = "olist-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "olverarcedev",email = "olverarcedev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupyterlab (>=4.5.1,<5.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "google-cloud-storage (>=3.7.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "google-cloud-bigquery (>=3.39.0,<4.0.0)",
    "google-cloud-bigquery-storage (>=2.36.0,<3.0.0)",
    "pandas-gbq (>=0.32.0,<0.33.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)"
]

[tool.poetry]
packages = [{include = "olist_ml", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "hydra-colorlog (>=1.2.0,<2.0.0)",
    "dvc[gs] (>=3.65.0,<4.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)"
]


[tool.poetry.scripts]
run_extract_pipeline = "olist_ml.pipelines.extract.main:main"
run_preprocessing_pipeline = "olist_ml.pipelines.preprocessing.main:main"